tests/ui/const-generics/generic-const-array-pattern-ice-139815.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/generic-const-array-empty-pattern-ice-139815.rs:7:12
   |
LL | #![feature(generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: overly complex generic constant
  --> $DIR/generic-const-array-empty-pattern-ice-139815.rs:12:14
   |
LL |       x: [u32; {
   |  ______________^
LL | |
LL | |         N;
LL | |         5
LL | |     }],
   | |_____^ blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: overly complex generic constant
  --> $DIR/generic-const-array-empty-pattern-ice-139815.rs:26:14
   |
LL |       x: [u32; {
   |  ______________^
LL | |
LL | |         N + 1;
LL | |         5
LL | |     }],
   | |_____^ blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to 2 previous errors; 1 warning emitted

